<resources>
    <string name="app_name">Just Java</string>
    <string name="Hello_World">Hello World!</string>
    <string name="Quantity">Quantity</string>
    <string name="chocolate">Chocolate</string>
    <string name="Order">Order</string>
    <string name="toppings">Toppings</string>
    <string name="Name">Name</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

</resources>
