<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">


    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Toppings" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/whipped_cream_check_box"
            style="@style/IconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="whippedCream" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Whipped Cream" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chocolate_check_box"
            style="@style/IconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="chocolate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate" />
    </LinearLayout>


    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quantity"
        android:textColor="#607D8B" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#CFD8DC"
            android:onClick="increment"
            android:text="@string/plus"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/amount_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/zero"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#CFD8DC"
            android:onClick="decrement"
            android:text="@string/minus"
            android:textColor="#000000" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#CFD8DC"
        android:onClick="submitOrder"
        android:text="@string/Order"
        android:textColor="#000000" />

</LinearLayout>